# modo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  publish.yml
docs/: review-bugs.md  review-inconsistencies.md  review-roadmap.md  review-security.md  review-testing-gaps.md
docs/plans/: 2026-03-04-modo-architecture-design.md  2026-03-04-phase1-foundation.md  2026-03-04-phase2-implementation.md  2026-03-04-rskit-architecture-design.md  2026-03-06-crate-split-design.md  2026-03-06-modo-db-design.md  2026-03-06-modo-db-implementation.md  2026-03-06-session-entity-feature-flags-design.md  2026-03-06-session-entity-feature-flags-plan.md  2026-03-07-modo-jobs-design.md  2026-03-07-modo-session-design.md  2026-03-08-modo-auth-design.md  2026-03-08-modo-auth-plan.md  2026-03-08-modo-i18n-implementation.md  2026-03-08-modo-templates-design.md  2026-03-08-modo-templates-implementation.md  2026-03-09-modo-feature-roadmap.md
examples/hello/: Cargo.toml
examples/jobs/: Cargo.toml
examples/jobs/src/: config.rs  handlers.rs  jobs.rs  main.rs  payloads.rs
examples/sse-chat/: Cargo.toml
examples/sse-dashboard/: Cargo.toml
examples/templates/: Cargo.toml
examples/todo-api/: Cargo.toml
examples/upload/: Cargo.toml
modo/: Cargo.toml  README.md
modo-auth/: Cargo.toml  README.md
modo-auth/src/: context_layer.rs  extractor.rs  lib.rs  password.rs  provider.rs
modo-auth/tests/: integration.rs
modo-cli/: Cargo.toml  README.md
modo-cli/src/: main.rs  scaffold.rs
modo-cli/tests/: scaffold_test.rs
modo-csrf/src/: middleware.rs  template.rs
modo-db/: Cargo.toml  README.md
modo-db-macros/: Cargo.toml  README.md
modo-db-macros/src/: entity.rs  lib.rs
modo-db/src/: config.rs  connect.rs  entity.rs  error.rs  extractor.rs  helpers.rs  lib.rs  migration.rs  pool.rs  query.rs  sync.rs
modo-db/tests/: hooks.rs  soft_delete.rs
modo-email/: Cargo.toml  README.md
modo-email/src/: config.rs  factory.rs  lib.rs  mailer.rs  message.rs
modo-email/tests/: integration.rs  smtp_e2e.rs
modo-i18n/: Cargo.toml
modo-i18n-macros/src/: lib.rs
modo-i18n/src/: extractor.rs  lib.rs  middleware.rs  store.rs  template.rs
modo-i18n/tests/: integration.rs  template_integration.rs
modo-jobs/: Cargo.toml  README.md
modo-jobs-macros/: Cargo.toml  README.md
modo-macros/: Cargo.toml  README.md
modo-session/: Cargo.toml  README.md
modo-templates/: Cargo.toml
modo-tenant/: Cargo.toml  README.md
modo-tenant/src/: context_layer.rs  extractor.rs  guard.rs  lib.rs  member.rs  resolver.rs
modo-tenant/src/resolvers/: header.rs  path_prefix.rs  subdomain.rs
modo-upload/: Cargo.toml  README.md
modo-upload-macros/: Cargo.toml  README.md
modo-upload-macros/src/: from_multipart.rs  lib.rs
rskit/: Cargo.toml
rskit-macros/: Cargo.toml
(+214 files in other folders)
